# pysheds

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py  tox.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 001-GENERIC-ISSUE.yml  002-BUG_REPORT.yml  003-FEATURE_REQUEST.yml  config.yml
.github/workflows/: python-publish.yml  testing.yml
CI/: requirements_ci.in  requirements_ci.txt
data/: sirajganj_dem.tif
docs/: index.md
examples/: crs_conversion.ipynb  extract_river_network.ipynb  flowdir_vs_projection.ipynb  hand.ipynb  laplacian.ipynb  no_metadata.ipynb  performance.ipynb  quickstart.ipynb  rfsm.ipynb  routing_modes.ipynb  shapefiles.ipynb  snap_to_mask.ipynb  terrain.ipynb
pysheds/: __init__.py  rfsm.py  sgrid.py  sview.py
tests/: test_grid.py
