[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"


[project]
name = "pysheds"
description = "Simple and fast watershed delineation in python."
readme = {text = "Simple and fast watershed delineation in python.", content-type = "text/x-rst"}
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Matt Bartos", email = "mdbartos@umich.edu"},
]
maintainers = [
    {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dynamic = ["version"]
dependencies = [
    "affine",
    "geojson",
    "looseversion",
    "numba>=0.60",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "scikit-image>=0.21",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]
recipes = ["geopandas", "ipython", "matplotlib", "seaborn"]

[project.urls]
Homepage = "http://open-storm.org"
Repository = "https://github.com/pysheds/pysheds"

[tool.coverage.paths]
source = ["pysheds/", "*/site-packages/pysheds/"]

[tool.coverage.run]
omit = ["examples/*.ipynb", "tests/*.py"]
relative_files = true

[tool.hatch.build.targets.wheel]
packages = ["pysheds"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--strict-markers",
  "--verbose",
]
filterwarnings = ["ignore::UserWarning"]
markers = []
testpaths = ["tests"]
